Updated some List usage inside the API and worked on some visualizers.